--- a/src/output.css
+++ b/src/output.css
@@ -708,6 +708,10 @@ video {
   height: 60px;
 }
 
+.h-\[108px\] {
+  height: 108px;
+}
+
 .max-h-0 {
   max-height: 0px;
 }
@@ -716,12 +720,20 @@ video {
   max-height: 791px;
 }
 
+.max-h-\[224px\] {
+  max-height: 224px;
+}
+
 .min-h-\[42px\] {
   min-height: 42px;
 }
 
 .min-h-\[60px\] {
   min-height: 60px;
+}
+
+.min-h-\[108px\] {
+  min-height: 108px;
 }
 
 .w-1\/3 {
@@ -1007,16 +1019,6 @@ video {
   background-color: #00000033;
 }
 
-.bg-\[\#009B79\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 155 121 / var(--tw-bg-opacity, 1));
-}
-
-.bg-\[\#00A3BA\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 163 186 / var(--tw-bg-opacity, 1));
-}
-
 .bg-\[\#5C0000\] {
   --tw-bg-opacity: 1;
   background-color: rgb(92 0 0 / var(--tw-bg-opacity, 1));
@@ -1025,11 +1027,6 @@ video {
 .bg-\[\#9E2A2F\] {
   --tw-bg-opacity: 1;
   background-color: rgb(158 42 47 / var(--tw-bg-opacity, 1));
-}
-
-.bg-\[\#E87722\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(232 119 34 / var(--tw-bg-opacity, 1));
 }
 
 .bg-\[\#f1f1f3\] {
@@ -1081,18 +1078,6 @@ video {
   background-repeat: no-repeat;
 }
 
-.fill-\[\#9E2A2FCC\] {
-  fill: #9E2A2FCC;
-}
-
-.fill-current {
-  fill: currentColor;
-}
-
-.fill-\[\#9E2A2F\] {
-  fill: #9E2A2F;
-}
-
 .fill-\[\#009B79\] {
   fill: #009B79;
 }
@@ -1101,8 +1086,20 @@ video {
   fill: #00A3BA;
 }
 
+.fill-\[\#9E2A2FCC\] {
+  fill: #9E2A2FCC;
+}
+
+.fill-\[\#9E2A2F\] {
+  fill: #9E2A2F;
+}
+
 .fill-\[\#E87722\] {
   fill: #E87722;
+}
+
+.fill-current {
+  fill: currentColor;
 }
 
 .p-2 {
@@ -1173,11 +1170,6 @@ video {
 .py-\[16px\] {
   padding-top: 16px;
   padding-bottom: 16px;
-}
-
-.py-\[20px\] {
-  padding-top: 20px;
-  padding-bottom: 20px;
 }
 
 .py-\[40px\] {
@@ -1430,6 +1422,10 @@ video {
 
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.soft-curve-left {
+  clip-path: ellipse(130% 100% at 0% 50%);
 }
 
 .carousel-wrapper {
@@ -2207,14 +2203,6 @@ video {
 
   .xl\:text-left {
     text-align: left;
-  }
-
-  .xl\:text-\[39px\] {
-    font-size: 39px;
-  }
-
-  .xl\:leading-\[46\.8px\] {
-    line-height: 46.8px;
   }
 }
 
